# DistributedApplication

./: .gitignore  README.md
BookRent/: .dockerignore  BookRent.sln  api-bookrent.crt  api-bookrent.key  compose.yaml  docker-compose.yml  generate-client.readme.md  minikube.md  yarp.appsettings.json
BookRent.WebClient/src/Client/: apiClient.g.ts
BookRent/BookRent.Catalog/: BookRent.Catalog.csproj  BookRent.Catalog.http  Dockerfile
BookRent/BookRent.Catalog/Properties/: launchSettings.json
BookRent/BookRent.Gateway/: BookRent.Gateway.csproj  Dockerfile  Program.cs  appsettings.json
BookRent/BookRent.Gateway/Properties/: launchSettings.json
BookRent/BookRent.Orchestrator/: BookRent.Orchestrator.csproj  Dockerfile  EmployeeOrchestrationSagas.cs  Program.cs  appsettings.Development.json
BookRent/BookRent.Orchestrator/Api/: AuthentificationSagas.cs  EmployeeOrchestrationSagas.cs  OrchestratorEndpoints.cs
BookRent/BookRent.Orchestrator/Clients/: CatalogClient.g.cs  IdentityClient.g.cs  (+2 more)
BookRent/k8s/: orchestrator_ingress.yaml  services.yaml  sql-secrety.yaml  sql.yaml
project/: .coverage  .gitignore  README.md  experimental_run.sh  project.toml  pyproject.toml  run_unit_tests.sh
project/src/: fedlfp.py
project/src/adasplit/: __init__.py  client.py  configs.py  data.py  metrics.py  models.py  orchestrator.py  proto.py  run.py  server.py  splitfed.py
project/src/fedLFP/: client.py  data.py  operations.py  orchestrator.py  run.py  server.py
project/tests/: test_metrics.py
slides/: minikube_kubectl_cheatsheet.md
slides/exercises/: diagrams.drawio
(+138 files in other folders)
